@@ -832,7 +832,6 @@ class ActionController {
                     $this->tca,
                     $markerObj,
                     $dataObj,
-                    $setfixedObj,
                     $template,
                     $theTable,
                     $autoLoginKey,
@@ -873,7 +872,6 @@ class ActionController {
                         $markerObj,
                         $dataObj,
                         $template,
-                        $setfixedObj.
                         $theTable,
                         $autoLoginKey,
                         $prefixId,
@@ -918,7 +916,6 @@ class ActionController {
                         $markerObj,
                         $dataObj,
                         $template,
-                        $setfixedObj,
                         $theTable,
                         $autoLoginKey,
                         $prefixId,
@@ -1102,7 +1099,6 @@ class ActionController {
                         $markerObj,
                         $dataObj,
                         $template,
-                        $setfixedObj,
                         $theTable,
                         $autoLoginKey,
                         $prefixId,
