@@ -594,7 +594,6 @@ class SetFixed {
                             $markerObj,
                             $dataObj,
                             $template,
-                            $this,
                             $theTable,
                             $autoLoginKey,
                             $prefixId,
@@ -638,7 +637,6 @@ class SetFixed {
                                 $markerObj,
                                 $dataObj,
                                 $template,
-                                $this,
                                 $theTable,
                                 $autoLoginKey,
                                 $prefixId,
@@ -812,194 +810,6 @@ class SetFixed {
         );
 
         return $content;
-    }
-
-    /**
-    * Computes the setfixed url's
-    *
-    * @param array  $markerArray: the input marker array
-    * @param array  $setfixed: the TS setup setfixed configuration
-    * @param array  $record: the record row
-    * @param array $controlData: the object of the control data
-    * @param array $autoLoginKey: the auto-login key
-    * @return void
-    */
-    public function computeUrl (
-        $nextCmd,
-        $prefixId,
-        $cObj,
-        \JambageCom\Agency\Request\Parameters $controlData,
-        &$markerArray,
-        $setfixed,
-        array $record,
-        $theTable,
-        $useShortUrls,
-        $editSetfixed,
-        $autoLoginKey,
-        $confirmType
-    ) {
-        if ($controlData->getSetfixedEnabled() && is_array($setfixed)) {
-            $authObj = GeneralUtility::makeInstance(\JambageCom\Agency\Security\Authentication::class);
-
-            foreach($setfixed as $theKey => $data) {
-                if (strstr($theKey, '.')) {
-                    $theKey = substr($theKey, 0, -1);
-                }
-                $setfixedpiVars = array();
-                $noFeusersEdit = false;
-
-                if ($theTable != 'fe_users' && $theKey == 'EDIT') {
-                    $noFeusersEdit = true;
-                }
-
-                $setfixedpiVars[$prefixId . '%5BrU%5D'] = $record['uid'];
-                $fieldList = $data['_FIELDLIST'];
-                $fieldListArray = GeneralUtility::trimExplode(',', $fieldList);
-
-                foreach ($fieldListArray as $fieldname) {
-                    if (isset($data[$fieldname])) {
-                        $fieldValue = $data[$fieldname];
-
-                        if ($fieldname == 'usergroup' && $data['usergroup.']) {
-                            $tablesObj = GeneralUtility::makeInstance(\JambageCom\Agency\Domain\Tables::class);
-                            $addressObj = $tablesObj->get('address');
-                            $userGroupObj = $addressObj->getFieldObj('usergroup');
-
-                            if (is_object($userGroupObj)) {
-                                $fieldValue =
-                                    $userGroupObj->getExtendedValue(
-                                        $extensionKey,
-                                        $fieldValue,
-                                        $data['usergroup.'],
-                                        $record
-                                    );
-
-                                $data[$fieldname] = $fieldValue;
-                            }
-                        }
-                        $record[$fieldname] = $fieldValue;
-                    }
-                }
-
-                $theCmd = '';
-                $pidCmd = '';
-
-                if ($noFeusersEdit) {
-                    $theCmd = $pidCmd = 'edit';
-                    if($editSetfixed) {
-                        $bSetfixedHash = true;
-                    } else {
-                        $bSetfixedHash = false;
-                        $setfixedpiVars[$prefixId . '%5BaC%5D'] =
-                            $authObj->generateAuthCode(
-                                $record,
-                                $fieldList
-                            );
-                    }
-                } else {
-                    $theCmd = 'setfixed';
-                    $pidCmd = 'confirm';
-                    if ($nextCmd == 'invite') {
-                        $pidCmd = 'confirmInvitation';
-                    }
-                    if ($nextCmd == 'password') {
-                        $pidCmd = 'password';
-                    }
-                    $setfixedpiVars[$prefixId . '%5BsFK%5D'] = $theKey;
-                    $bSetfixedHash = true;
-
-                    if (
-                        $useShortUrls &&
-                        $autoLoginKey != ''
-                    ) {
-                        $setfixedpiVars[$prefixId . '%5Bkey%5D'] = $autoLoginKey;
-                    }
-                }
-
-                if ($bSetfixedHash) {
-                    $setfixedpiVars[$prefixId . '%5BaC%5D'] =
-                        $authObj->setfixedHash($record, $fieldList);
-                }
-                $setfixedpiVars[$prefixId . '%5Bcmd%5D'] = $theCmd;
-
-                if (is_array($data) ) {
-                    foreach($data as $fieldname => $fieldValue) {
-                        if (strpos($fieldname, '.') !== false) {
-                            continue;
-                        }
-                        $setfixedpiVars['fD%5B' . $fieldname . '%5D'] = rawurlencode($fieldValue);
-                    }
-                }
-
-                $linkPID = $controlData->getPid($pidCmd);
-
-                if (
-                    GeneralUtility::_GP('L') &&
-                    !GeneralUtility::inList($GLOBALS['TSFE']->config['config']['linkVars'], 'L')
-                ) {
-                    $setfixedpiVars['L'] = GeneralUtility::_GP('L');
-                }
-
-                if ($useShortUrls) {
-                    $thisHash = $this->storeFixedPiVars($setfixedpiVars);
-                    $setfixedpiVars = array($prefixId . '%5BregHash%5D' => $thisHash);
-                }
-                $urlConf = array();
-                $urlConf['disableGroupAccessCheck'] = true;
-                $bconfirmTypeIsInt = \tx_div2007_core::testInt($confirmType);
-                $confirmType = ($bconfirmTypeIsInt ? intval($confirmType) : $GLOBALS['TSFE']->type);
-                $url =
-                    \tx_div2007_alpha5::getTypoLink_URL_fh003(
-                        $cObj,
-                        $linkPID . ',' . $confirmType,
-                        $setfixedpiVars,
-                        '',
-                        $urlConf
-                    );
-
-                $bIsAbsoluteURL = ((strncmp($url, 'http://', 7) == 0) || (strncmp($url, 'https://', 8) == 0));
-                $markerKey = '###SETFIXED_' . $cObj->caseshift($theKey, 'upper') . '_URL###';
-                $url = ($bIsAbsoluteURL ? '' : $controlData->getSiteUrl()) . ltrim($url, '/');
-                $markerArray[$markerKey] = str_replace(array('[', ']'), array('%5B', '%5D'), $url);
-            }	// foreach
-        }
-    }	// computeUrl
-
-    /**
-    *  Store the setfixed vars and return a replacement hash
-    */
-    public function storeFixedPiVars (array $params) {
-
-        $regHash_calc = \tx_div2007_core::generateHash($params, 20);
-
-            // and store it with a serialized version of the array in the DB
-        $res =
-            $GLOBALS['TYPO3_DB']->exec_SELECTquery(
-                'md5hash',
-                'cache_md5params',
-                'md5hash=' .
-                    $GLOBALS['TYPO3_DB']->fullQuoteStr(
-                        $regHash_calc,
-                        'cache_md5params'
-                    )
-                );
-
-        if (!$GLOBALS['TYPO3_DB']->sql_num_rows($res)) {
-            $insertFields = array (
-                'md5hash' => $regHash_calc,
-                'tstamp' => time(),
-                'type' => 99,
-                'params' => serialize($params)
-            );
-
-            $GLOBALS['TYPO3_DB']->exec_INSERTquery(
-                'cache_md5params',
-                $insertFields
-            );
-        }
-        $GLOBALS['TYPO3_DB']->sql_free_result($res);
-
-        return $regHash_calc;
     }
 }
 
