@@ -1,6 +1,7 @@
 
 2018-03-02 Franz Holzinger <franz@ttproducts.de>
     * rename Classes/Api/Email.php => Classes/Controller/Email.php
+    * extract methods computeUrl and storeFixedPiVars from class Controller/Setfixed into class Setfixed/SetfixedUrls as compute and storeFixedPiVars. Remove the not any more needed method parameter variables $setfixedObj from several classes.
 
 2018-02-26 Franz Holzinger <franz@ttproducts.de>
     * move getSimpleTemplate from CreateView into Template
